[package]
name = "crypto-news"
version = "0.1.0"
authors = ["piyush <piyush.codelabs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.5.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }
